[package]
name = "oni-tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "oni_tools"
path = "rust/lib.rs"

[[bin]]
name = "oni-tools"
path = "rust/main.rs"

[dependencies]
clap = { version = "4.5.18", features = ["cargo", "derive"] }
phf = { version = "^0.11", features = ["macros"] }
pyo3 = "0.22.3"
uom = "^0.36.0"

[build-dependencies]
csv = "1.3.0"
phf_codegen = "0.11.2"
