[package]
name = "oni-tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "oni_tools"
path = "rust/lib.rs"

[[bin]]
name = "oni-tools"
path = "rust/main.rs"

[features]
python = ["dep:pyo3"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
clap = { version = "^4.5.20", features = ["cargo", "derive"] }
phf = { version = "^0.11", features = ["macros"] }
uom = "^0.36.0"
pyo3 = { version = "^0.22.5", optional = true }
wasm-bindgen = { version = "^0.2.95", optional = true }

[build-dependencies]
csv = "1.3.0"
phf_codegen = "0.11.2"
