[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "oni-tools"
version = "0.1.0"  # TODO: Dynamic cross-language version

[tool.setuptools.packages]
find = { where = ["python"] }

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
# # The last part of the name ("oni_tools") has to match lib.name in Cargo.toml,
target = "oni_tools._rust.oni_tools"
