[package]
name = "oni-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["cargo", "derive"] }
phf = { version = "^0.11", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
uom = "^0.36.0"

[build-dependencies]
csv = "1.3.0"
phf_codegen = "0.11.2"